@@ -39,6 +39,7 @@ public class FlagMover implements BlockMover
     private int yMax, zMin, zMax;
     private List<MyBlockData> savedBlocks = new ArrayList<>();
     private final AtomicBoolean blocksPlaced = new AtomicBoolean(false);
+    private int endCount;
 
     @SuppressWarnings("deprecation")
     public FlagMover(BigDoors plugin, World world, double time, Door door)
@@ -173,7 +174,8 @@ public class FlagMover implements BlockMover
 
         if (!onDisable)
         {
-            int delay = Math.min(plugin.getMinimumDoorDelay(), plugin.getConfigLoader().coolDown() * 20);
+            int delay = buttonDelay(endCount)
+                + Math.min(plugin.getMinimumDoorDelay(), plugin.getConfigLoader().coolDown() * 20);
             new BukkitRunnable()
             {
                 @Override
@@ -199,10 +201,10 @@ public class FlagMover implements BlockMover
     // Method that takes care of the rotation aspect.
     private void rotateEntities()
     {
+        endCount = (int) (20.0f / tickRate * time);
         new BukkitRunnable()
         {
             double counter = 0;
-            int endCount = (int) (20 / tickRate * time);
             int totalTicks = (int) (endCount * 1.1);
             long startTime = System.nanoTime();
             long lastTime;
